添加上传图片生成桌宠
